--- a/ReservationRoom/Reservation.html
+++ b/ReservationRoom/Reservation.html
@@ -17,10 +17,20 @@
                 </div>
                 <div class="right-header">
                     <div class="link1">
-                        <a href="#Contact-US">Contact us</a>
+                        <div class="unlock1">
+                            <a href="#Contact-US">Contact us</a>
+                        </div>
+                        <div class="lock1">
+                            <a href="#Contact-US"><i class="fa-regular fa-user"></i></a>
+                        </div>
                     </div>
                     <div class="link2">
-                        <a href="#Log-In">Login</a>
+                        <div class="unlock2">
+                            <a href="#Log-In">Login</a>
+                        </div>
+                        <div class="lock2">
+                            <a href="#Log-In"> <i class="fa-solid fa-phone"></i></a>
+                        </div>
                     </div>
                 </div>
             </div>
